--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -646,7 +646,6 @@ Some Emacs Global Bindings are redefined here.
     :init
     (key-chord-mode 1)
     (key-chord-define-global "FF" 'projectile-find-file)
-    (key-chord-define-global "::" 'avy-goto-char-timer)
     (key-chord-define-global "GG" 'consult-ripgrep)  
     (key-chord-define-global "OO" 'consult-outline)
     (key-chord-define-global "DD" 'delete-region)
@@ -844,9 +843,11 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "p" #'nc/goto-my-credentials
   "s" #'nc/goto-ssh-config-file
   "A" #'nc/goto-archives-dir
+  "B" #'nc/open-bookmark
   "P" #'nc/goto-projects-dir
   "N" #'nc/goto-notes-dir
-  "T" #'nc/goto-templates-dir)
+  "T" #'nc/goto-templates-dir
+)
 
 (keymap-set global-map "C-c g" nc-goto-map)
 
@@ -857,20 +858,12 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "D" #'nc/insert-datestamp
   "e" #'emoji-search
   "p" #'nc/generate-password
-  "q" #'quoted-insert
   "t" #'tempel-insert
   "u" #'nc/uuid
   "y" #'consult-yasnippet
   "Y" #'yankpad-insert)
 
 (keymap-set global-map "C-c i" nc-insert-map)
-
-(defvar-keymap nc-kill-map
-  :doc "My custom kill map"
-  "f" #'delete-frame
-  "b" #'kill-buffer-and-window)
-
-(keymap-set global-map "C-c k" nc-kill-map)
 
 (defvar-keymap nc-notes-map
   :doc "My custom notes map"
@@ -895,6 +888,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
 (keymap-set global-map "C-c p" nc-project-map)
 
+;TODO: remove and remap M-S .
 (defvar-keymap nc-search-map
   :doc "My custom kill map"
   "." #'nc/consult-line-symbol-at-point)
@@ -924,17 +918,14 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
 (keymap-set global-map "C-c w" nc-window-map)
 
-(defvar-keymap nc-external-map
-  :doc "My custom external map"
+(defvar-keymap nc-extended-command-map
+  :doc "My custom extended command map"
   ;; Open Commands
   "c" #'calc
-  "o" #'crux-open-with
-  "l" #'nc/open-bookmark)
+  "d" #'nc/jwt-decode
+  "o" #'crux-open-with)
 
-(keymap-set global-map "C-c x" nc-external-map)
-
-
-
+(keymap-set global-map "C-c x" nc-extended-command-map)
 
 ;; (defvar-keymap nc-prefix-map
 ;;   :doc "My global prefix keymap"
@@ -1816,8 +1807,6 @@ Completion configuration automatically tangled in =./lisp/setup-completion.el=
                 (lambda () (when (bound-and-true-p selectrum-mode) (selectrum-exhibit))))
     (setq marginalia-annotators '(marginalia-annotators-heavy marginalia-annotators-light nil)))
 #+end_src
-
-
 
 ** Consult
 
@@ -4911,7 +4900,55 @@ Otherwise, open the repository's main page."
   (let ((current-prefix-arg '(4))) ;; C-u
     (call-interactively #'nc/vc-browse-remote)))
 #+end_src
+** jwt-decode
 
+#+begin_src emacs-lisp
+(defun nc/jwt-decode (start end)
+  "Decode a JWT token from the selected region and display it in a JSON buffer.
+If called interactively, uses the current region.
+If called from Lisp, START and END specify the region."
+  (interactive "r")
+  (let* ((token (string-trim (buffer-substring-no-properties start end)))
+         (parts (split-string token "\\."))
+         (header-b64 (car parts))
+         (payload-b64 (cadr parts))
+         (signature (caddr parts)))
+    (unless (= (length parts) 3)
+      (error "Invalid JWT format: expected 3 parts separated by dots"))
+    (let ((header (json-read-from-string 
+                   (decode-coding-string 
+                    (base64-decode-string 
+                     (jwt--base64url-to-base64 header-b64))
+                    'utf-8)))
+          (payload (json-read-from-string 
+                    (decode-coding-string 
+                     (base64-decode-string 
+                      (jwt--base64url-to-base64 payload-b64))
+                     'utf-8))))
+      (with-current-buffer (get-buffer-create "*JWT Decoded*")
+        (erase-buffer)
+        (insert "{\n  \"header\": ")
+        (insert (json-encode header))
+        (insert ",\n  \"payload\": ")
+        (insert (json-encode payload))
+        (insert ",\n  \"signature\": \"")
+        (insert signature)
+        (insert "\"\n}")
+        (js-json-mode)
+        (json-pretty-print-buffer)
+        (goto-char (point-min))
+        (display-buffer (current-buffer))))))
+
+(defun jwt--base64url-to-base64 (str)
+  "Convert base64url encoded STR to standard base64."
+  (let* ((b64 (replace-regexp-in-string "-" "+" str))
+         (b64 (replace-regexp-in-string "_" "/" b64)))
+    ;; Add padding if needed
+    (let ((pad (% (length b64) 4)))
+      (if (> pad 0)
+          (concat b64 (make-string (- 4 pad) ?=))
+        b64))))
+#+end_src
 
 
 * Provided modules
